<resources>
    <string name="app_name">HelloWorld2</string>
    <string name="sayhello">Say Hello</string>
    <string name="sayhello2">Say Hello 2</string>
    <string name="enter_name">Enter your Name</string>
    <string name="hello">Hello</string>
    <string name="back">Back</string>
    <string name="back_return_value">Back and Return Value</string>
    <string name="show_toolbar">Show Activity with ToolBar</string>
    <string name="show_fragments">Show Activity with Fragments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hello">HelloActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>